# django_ssd

./: .gitignore  README.md  db.sqlite3  manage.py  pass.txt  pyproject.toml  pytest.ini
django_ssd/: asgi.py  settings.py  urls.py  wsgi.py
records/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
records/migrations/: 0001_initial.py  0002_rename_records_record.py  0003_alter_record_humidity_alter_record_wind.py  0004_alter_record_date.py  0005_alter_record_date.py  0006_alter_record_humidity_alter_record_wind.py  0007_remove_record_created_at.py
tests/records/: test_models.py  test_urls.py
