[tool.poetry]
name = "django_ssd"
version = "0.1.0"
description = ""
authors = ["GiovanniCrudo00 <crugio23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
